...
    <string name="find_event_join_event_button_text">Join Event</string>
    <string name="find_event_no_event_available">No event details available</string>
    <string name="find_event_near_me_toast">Locating you…</string>
    <string name="find_event_no_result">No result</string>
    <string name="find_event_location_not_selected">No location selected</string>
    <string name="joining_toast">Joining</string>
    <string name="search_location">Search for a location</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_screen_title">Welcome to</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login_to_continue">Please login/create an account to continue</string>
    <string name="event_changes_saved">The event\'s changes have been saved</string>
    <string name="my_events_screen_name">My events</string>
...
    <string name="find_event_location_not_found">Location not found</string>
    <string name="permission_denied">Permission denied</string>
    <string name="find_event_event_locate_searching">Locating…</string>

    <string name="share_event_button">Share</string>
    <string name="calendar_failed">Event can\'t be added to calendar</string>
    <string name="add_event_to_calendar_prefix">Do you want to add the event \"</string>
    <string name="add_event_to_calendar_suffix">\" to your calendar ?</string>
    <string name="manage_staff_screen_title">Manage Staff</string>
    <string name="manage_staff_screen_staff_list_name">Staff List:</string>
    <string name="manage_staff_screen_empty_staff_list">There is no staff for this event</string>
    <string name="manage_staff_screen_guest_list_name">Guest List:</string>
    <string name="manage_staff_screen_empty_guest_list">There are no guests in this event:</string>
    <string name="manage_staff_promote_guest_to_staff_failure">Failure to promote guest</string>
...
