...
          }
        } else {
          showSearchBar = searching || searchCompleted || locationQuery.isNotEmpty()
        }
      },
      placeholder = { Text(stringResource(id = R.string.search_location)) },
      modifier = modifier.testTag("LocationComponent"),
      trailingIcon = {
        when {
          searching -> CircularProgressIndicator()
          locationQuery.isNotEmpty() && searchCompleted ->
              IconButton(onClick = clearLocationInput, modifier = Modifier.testTag("ClearIcon")) {
                Icon(imageVector = Icons.Default.Clear, contentDescription = "Clear")
              }
          locationQuery.isNotEmpty() && !searchCompleted ->
              IconButton(onClick = launchSearch, modifier = Modifier.testTag("SearchIcon")) {
                Icon(imageVector = Icons.Default.Search, contentDescription = "Search")
              }
        }
      }) {
        if (possibleLocations.isNotEmpty()) {
          Surface(
...
